[gd_scene load_steps=2 format=3 uid="uid://c5stainedglass001"]

[ext_resource type="Script" path="res://src/minigames/stained_glass.gd" id="1_stained"]

[node name="StainedGlass" type="Node2D"]
script = ExtResource("1_stained")
snap_distance = 30.0
frame_size = Vector2(300, 400)
frame_position = Vector2(50, 50)
scatter_area = Rect2(400, 50, 300, 400)

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 500.0
color = Color(0.12, 0.12, 0.15, 1)

[node name="FrameContainer" type="Node2D" parent="."]

[node name="FrameBorder" type="ColorRect" parent="FrameContainer"]
offset_left = 42.0
offset_top = 42.0
offset_right = 358.0
offset_bottom = 458.0
color = Color(0.4, 0.3, 0.2, 1)

[node name="FrameInner" type="ColorRect" parent="FrameContainer"]
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 450.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="TargetsContainer" type="Node2D" parent="."]

[node name="FragmentsContainer" type="Node2D" parent="."]
